[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/menus/ScenarioSelect.gd" id="1_scensel"]

[node name="ScenarioSelect" type="CanvasLayer"]
script = ExtResource("1_scensel")

[node name="Background" type="ColorRect" parent="."]
color = Color(0.02, 0.02, 0.08, 1)
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Select Scenario"
theme_override_font_sizes/font_size = 48

[node name="ScenarioList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)

[node name="ScenarioDescription" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 100)
bbcode_enabled = true
text = "Select a scenario above to see its description."

[node name="BtnStart" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
text = "Start Battle"

[node name="BtnBack" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
text = "Back"
